package com.sissilab.dp.ox1_creational.ox12_factory_method.factory_method.product;

public interface IProduct {

    /**
     * 描述产品内容
     */
    void desc();

}
