package com.sissilab.dp.ox1_creational.ox12_factory_method.factory_method.product;

public class Laptop implements IProduct {
    @Override
    public void desc() {
        System.out.println("I am a laptop.");
    }
}
